--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Pycharm
+.idea
+
 # Default Input and Output Dataset Folders
 cifar10
 dataset_partitions
